update security configuration and add redis to UI